--- a/tieba/package.json
+++ b/tieba/package.json
@@ -12,6 +12,7 @@
     "dotenv": "^16.0.0",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "shortid": "^2.2.16"
+    "shortid": "^2.2.16",
+    "serverless-http": "^2.8.0"
   }
 }
