--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "shortid": "^2.2.16",
-    "serverless-http": "^3.2.0"
+    "serverless-http": "^3.2.0",
+    "octokit": "^2.0.0"
   }
 }
